test/files/neg/t2386.check
<<<<<<< HEAD
t2386.scala:2: error: could not find implicit value for evidence parameter of type scala.reflect.ClassManifest[Array[_ >: java.lang.String with Int]]
=======
t2386.scala:2: error: could not find implicit value for evidence parameter of type scala.reflect.ClassManifest[Array[_ >: String with Int]]
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
  val a = Array(Array(1, 2), Array("a","b"))
               ^
one error found
